--- a/server/opencbs-core/pom.xml
+++ b/server/opencbs-core/pom.xml
@@ -320,4 +320,20 @@
             </plugin>
         </plugins>
     </build>
+    
+    <repositories>
+        <!-- JasperSoft, they modified a standard library for their own special needs -->
+        <repository>
+            <id>jaspersoft-third-party</id>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <!-- JasperSoft, they modified a standard library for their own special needs -->
+        <pluginRepository>
+            <id>jaspersoft-third-party</id>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
