--- a/server/opencbs-server/pom.xml
+++ b/server/opencbs-server/pom.xml
@@ -64,7 +64,6 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -203,5 +202,21 @@
         </plugins>
         </pluginManagement>
     </build>
+    
+    <repositories>
+        <!-- JasperSoft, they modified a standard library for their own special needs -->
+        <repository>
+            <id>jaspersoft-third-party</id>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <!-- JasperSoft, they modified a standard library for their own special needs -->
+        <pluginRepository>
+            <id>jaspersoft-third-party</id>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
