--- a/server/opencbs-spring-boot-starter/pom.xml
+++ b/server/opencbs-spring-boot-starter/pom.xml
@@ -117,4 +117,20 @@
         </dependency>
 
     </dependencies>
+    
+    <repositories>
+        <!-- JasperSoft, they modified a standard library for their own special needs -->
+        <repository>
+            <id>jaspersoft-third-party</id>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <!-- JasperSoft, they modified a standard library for their own special needs -->
+        <pluginRepository>
+            <id>jaspersoft-third-party</id>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
